# reddit-digest-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SPEC.md  config.yaml  pyproject.toml
.github/scripts/: ci_summary.py
.github/workflows/: benchmark.yml  ci.yml  docker.yml  release.yml
benchmarks/: README.md  aggregate.py  bench_model.py  generate_golden.py  model_pricing.yaml
benchmarks/fixtures/: golden_posts.json
charts/reddit-digest-agent/: Chart.yaml  README.md  values.yaml
charts/reddit-digest-agent/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml  serviceaccount.yaml
docker-compose/localai-stack/: README.md  docker-compose.yml
docker-compose/observability-stack/: README.md  docker-compose.yml
docker-compose/observability-stack/config/: otel-collector.yaml  tempo.yaml
docs/superpowers/plans/: 2026-04-11-compact-digest.md  2026-04-11-docker-workflow.md  2026-04-11-helm-chart-release-workflow.md  2026-04-11-opentelemetry-observability.md  2026-04-12-llm-benchmark.md  2026-04-12-observability-stack.md  2026-04-13-mcp-reddit-source.md  2026-04-13-openinference-hybrid.md
docs/superpowers/specs/: 2026-04-09-reddit-digest-agent-design.md  2026-04-11-compact-digest-design.md  2026-04-11-docker-workflow-design.md  2026-04-11-helm-chart-release-workflow-design.md  2026-04-11-opentelemetry-observability-design.md  2026-04-12-llm-benchmark-design.md  2026-04-12-observability-stack-design.md  2026-04-13-mcp-reddit-source-design.md  2026-04-13-openinference-hybrid-design.md
src/reddit_digest/: __init__.py  config.py  db.py  main.py  models.py  telemetry.py
tests/: conftest.py  test_benchmark.py  test_collector.py  test_config.py  test_db.py  test_deliverer.py  test_digest_graph.py  test_feedback.py  test_feedback_graph.py  test_filterer.py  test_integration.py  test_main.py  test_mcp_parser.py  test_scorer.py  test_summarizer.py  test_telemetry.py
(+12 files in other folders)
